--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </p>
     <p>
       This is a link to
-      <a href="portfolio.html">my portfolio</a>!
+      <a href="a/portfolio.html">my portfolio</a>!
     </p>
 
     <!-- include the Glitch button to show what the webpage is about and
