--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
 
     <title>Hello!</title>
 
-    <!-- import the webpage's stylesheet -->
-    <link rel="stylesheet" href="/style.css" />
-
-    <!-- import the webpage's javascript file -->
-    <script src="/script.js" defer></script>
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
+  <link
+  rel="stylesheet"
+  href="css.css"
+/>
   </head>
   <body>
     <img
@@ -19,8 +22,9 @@
       height="200"
       src="https://media1.giphy.com/media/5n5IIVf35HBPNOwau8/200_d.gif"
     />
-    <h1>Isaac says "Hello there"</h1>
-    <p>I am a programming newbie, learning at Temasek Poly.</p>
+    <h1 id= "h" 
+     class="animate__animated animate__bounce">Isaac says "Hello there"</h1>
+    <div id="h"><p>I am a programming newbie, learning at Temasek Poly.</p>
     <p></p>
 
     <p>
@@ -28,8 +32,9 @@
     </p>
     <p>
       This is a link to
-      <a href="a/portfolio.html">my portfolio</a>!
+      <a href="portfolio.html">my portfolio</a>!
     </p>
+    </div>
 
     <!-- include the Glitch button to show what the webpage is about and
           to make it easier for folks to view source and remix -->
