--- a/portfolio.html
+++ b/portfolio.html
@@ -2,4 +2,4 @@
     This is my portfolio.
   </h1>
   
-  <a href="/">Go home</a>
+  <a href="file:///C:/Users/ichon/OneDrive/Desktop/IsaacChong96.github.io/index.html">Go home</a>
