Added image link

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
       You can contact me at ichong1996.ic@gmail.com
     </p>
     <p>
-      This is a link to
-      <a href="portfolio.html">my portfolio</a>!
+      The link to my portfolio can be found in this image:<br>
+      <a href="https://github.com/IsaacChong96"><img border="0" alt="portfolio" src="https://i.kym-cdn.com/entries/icons/mobile/000/021/807/ig9OoyenpxqdCQyABmOQBZDI0duHk2QZZmWg2Hxd4ro.jpg" width="383" height="215.438"></a>
     </p>
 
     <table style="width:100%">
