Added Android specific viewport

--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="mobile-web-app-capable" content="yes">
 
     
     <style>
       table,th,td {border: 1px solid black;
                   border-collapse: collapse;}
       
-      .imgContainer{float:left;}
+      body {background-color:powder-blue;}
     </style>
   </head>
   <body>
