--- a/index.html
+++ b/index.html
@@ -15,14 +15,18 @@
 
       .flex-container {
        display: flex;
+       flex-wrap: wrap;
        background-color: DodgerBlue;
       }
 
       .flex-container > div {
+        width: 100px;
+        text-align: center;
         background-color: #f1f1f1;
         margin: 10px;
         padding: 20px;
         font-size: 30px;
+        line-height: 75px;
       }
 
 
@@ -51,6 +55,15 @@
       <div>1</div>
       <div>2</div>
       <div>3</div>
+      <div>4</div>
+      <div>5</div>
+      <div>6</div>
+      <div>7</div>
+      <div>8</div>
+      <div>9</div>
+      <div>10</div>
+      <div>11</div>
+      <div>12</div>
     </div>
 
     <h2>My home: Singapore</h2>
