Added pics of cats less cute than mine

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
        display: flex;
        flex-wrap: wrap;
        background-color: DodgerBlue;
+       border: 1px solid black;
+       justify-content: center;
+       align-content: center;
       }
 
       .flex-container > div {
@@ -27,6 +30,15 @@
         padding: 20px;
         font-size: 30px;
         line-height: 75px;
+      }
+
+      .flex-container2 {
+      display: flex;
+      flex-wrap: wrap;
+      border: 1px solid black;
+      justify-content: center;
+      align-content: center;
+      flex-direction: column-reverse;
       }
 
 
@@ -64,6 +76,14 @@
       <div>10</div>
       <div>11</div>
       <div>12</div>
+    </div><br>
+
+    <div class="flex-container2">
+      <div><img src=https://placekitten.com/200/300></div>
+      <div><img src=https://placekitten.com/96/139></div>
+      <div><img src=https://placekitten.com/200/138></div>
+      <div><img src=https://placekitten.com/200/286></div>
+      <div><img src=https://placekitten.com/200/140></div>
     </div>
 
     <h2>My home: Singapore</h2>
