--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       table,th,td {border: 1px solid black;
                   border-collapse: collapse;}
       
-      body {background-color:powder-blue;}
+      body {background-color: rgb(227, 144, 238);}
 
       .flex-container {
        display: flex;
@@ -45,6 +45,8 @@
     </style>
   </head>
   <body>
+
+    
     <img
       width="200"
       height="200"
