added anchor links

--- a/coding_resources.html
+++ b/coding_resources.html
@@ -14,15 +14,15 @@
    <h2>Index</h2>
 
    <ul>
-    <li>Git/Command Line Resources</li>
-    <li>HTML/CSS Resources</li>
-    <li>Javascript Resources</li>
-    <li>Java Resources</li>
-    <li>Other Resources</li>
-    <li>Notable Developer Figures</li>
+    <li><a href="#gitcmdln">Git/Command Line Resources</a></li>
+    <li><a href="#htmlcss">HTML/CSS Resources</a></li>
+    <li><a href="#javascript">Javascript Resources</a></li>
+    <li><a href="#java">Java Resources</a></li>
+    <li><a href="#others">Other Resources</a></li>
+    <li><a href="#devs">Notable Developer Figures</a></li>
    </ul>
 
-   <h4>Git/Command Line Resources</h4>
+   <h4 id="gitcmdln">Git/Command Line Resources</h4>
 
    <ul>
     <li><a href="https://slack-files.com/T01CMAWCV61-F01E43WAM4Z-df362dcdc3">git-command sheet</a></li>
@@ -33,7 +33,7 @@
     <li><a href="https://www.netlify.com/">Site-alternative to Github</a></li>
    </ul>
 
-   <h4>HTML/CSS Resources</h4>
+   <h4 id="htmlcss">HTML/CSS Resources</h4>
 
    <ul>
     <li><a href="https://animate.style/">Animate, library of CSS animations</a></li>
@@ -61,9 +61,9 @@
     <li><a href="https://getbootstrap.com/">Bootstrap Main site</a></li>
    </ul>
 
-   <h4>Javascript Resources</h4>
+   <h4 id="javascript">Javascript Resources</h4>
 
-   <h4>Java Resources</h4>
+   <h4 id="java">Java Resources</h4>
 
    <ul>
     <li><a href="https://slack-files.com/T01CMAWCV61-F01DVD47S6S-43dd42a3eb">Java terms</a></li>
@@ -75,7 +75,7 @@
     <li><a href="https://mkyong.com/java/what-is-new-in-java-15/">Java Programmer, gives updates on Java</a></li>
    </ul>
 
-   <h4>Other Resources</h4>
+   <h4 id="others">Other Resources</h4>
 
    <ul>
     <li><a href="https://basecamp.com/books/getting-real">Getting Real, a Basecamp book on web app development</a></li>
@@ -91,7 +91,7 @@
     <li><a href="https://opencv.org/">Real-time computer vision software</a></li>
    </ul>
 
-   <h4>Notable Developer Figures</h4>
+   <h4 id="devs">Notable Developer Figures</h4>
 
    <ul>
     <li><a href="https://en.wikipedia.org/wiki/Pinboard_(website)">Creator of Pinboard</a></li>
