Added concert signup sheet

--- a/bootstrap_exercise.html
+++ b/bootstrap_exercise.html
@@ -78,5 +78,47 @@
     </div>
   </div>
 
+  <form>
+    <div class="form-group">
+      <label for="exampleFormControlInput1">Full Name</label>
+      <input type="email" class="form-control" id="exampleFormControlInput1">
+    </div>
+    <div class="form-group">
+      <label for="exampleFormControlSelect1">Type of Music</label>
+      <select class="form-control" id="exampleFormControlSelect1">
+        <option>Country</option>
+        <option>Rock & Roll</option>
+        <option>Death Metal</option>
+        <option>Pop</option>
+        <option>Kpop</option>
+        <option>Jpop</option>
+        <option>Dubstep</option>
+        <option>Rap</option>
+      </select>
+    </div>
+    <div class="form-group">
+      <label for="exampleFormControlSelect2">Select instruments used</label>
+      <select multiple class="form-control" id="exampleFormControlSelect2">
+        <option>Guitar</option>
+        <option>Electric guitar</option>
+        <option>Drums</option>
+        <option>Piano</option>
+        <option>Kalimbah</option>
+        <option>Recorder</option>
+        <option>Flute</option>
+        <option>Harp</option>
+        <option>Triangle</option>
+        <option>Cat</option>
+        <option>Guzheng</option>
+        <option>Pipa</option>
+        <option>Not applicable</option>
+      </select>
+    </div>
+    <div class="form-group">
+      <label for="exampleFormControlTextarea1">Feedback</label>
+      <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="How was your day..."></textarea>
+    </div>
+  </form>
+
 </body>
 </html>
