--- a/bootstrap_exercise.html
+++ b/bootstrap_exercise.html
@@ -81,7 +81,7 @@
   <form>
     <div class="form-group">
       <label for="exampleFormControlInput1">Full Name</label>
-      <input type="email" class="form-control" id="exampleFormControlInput1">
+      <input type="text" class="form-control" id="exampleFormControlInput1">
     </div>
     <div class="form-group">
       <label for="exampleFormControlSelect1">Type of Music</label>
