--- a/coding_resources.html
+++ b/coding_resources.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta name="mobile-web-app-capable" content="yes">
     <style>
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+      <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
     </style>
   </head>
   <body>
@@ -93,6 +96,7 @@
     <li><a href="https://en.wikipedia.org/wiki/Waterfall_model">Waterfall Methodology</a></li>
     <li><a href="https://buyersguide.macrumors.com/">Site determining best time to purchase Apple products</a></li>
     <li><a href="https://opencv.org/">Real-time computer vision software</a></li>
+    <li><a href="https://github.com/">Github should be used as the primary method of promoting one's portfolio</a></li>
    </ul>
 
    <h4 id="devs">Notable Developer Figures</h4>
