Added additional resources to HTML/CSS section

--- a/coding_resources.html
+++ b/coding_resources.html
@@ -66,6 +66,7 @@
     <li><a href="https://gist.github.com/marcobarbosa/798569">Media Query Screen Size Templates</a></li>
     <li><a href="https://uideck.com/free-bootstrap-templates/">Bootstrap templates</a></li>
     <li><a href="https://getbootstrap.com/">Bootstrap Main site</a></li>
+    <li><a href="https://www.figma.com/">Figma, a prototyping site for UI/UX development</a></li>
    </ul>
 
    <h4 id="javascript">Javascript Resources</h4>
@@ -106,6 +107,11 @@
     <li><a href="https://github.com/sponsors/yyx990803">Evan You, Vue.js dev</a></li>
     <li><a href="https://twitter.com/dhh">DHH creator of Ruby on Rails</a></li>
    </ul>
+
+   /*Just a few things to take note of for future development of this site.
+   Concrete: Plan to add a navbar.
+   Fluid: Try to add more bootstrap features.
+   Fluid: Add a flexbox*/
    
 
 
