Added 7 entries to HTML/CSS and Javascript resources

--- a/coding_resources.html
+++ b/coding_resources.html
@@ -112,9 +112,19 @@
     <li><a href="https://webflow.com/">Website design/hosting platform</a></li>
     <li><a href="https://theadminbar.com/simple-responsive-font-size-calculator/">Simple font size calculator</a></li>
     <li><a href="http://www.responsivegridsystem.com/calculator/">Grid percentage calculator</a></li>
+    <li><a href="https://fontawesome.com/v4.7.0/icons/">Library of icons</a></li>
+    <li><a href="https://www.freecodecamp.org/news/the-100-correct-way-to-do-css-breakpoints-88d6a5ba1862/">Article on CSS breakpoints</a></li>
+    <li><a href="https://css-tricks.com/grid-auto-flow-css-grid-flex-direction-flexbox/">Flexbox tips</a></li>
+    <li><a href="https://frontend.horse/articles/thinking-outside-the-box-with-css-grid/">Unique CSS grid design</a></li>
+    <li><a href="https://umaar.com/dev-tips/240-css-overview-improved/">How to enable CSS Overview Panel</a></li>
    </ul>
 
    <h4 id="javascript">Javascript Resources</h4>
+
+   <ul>
+     <li><a href="https://www.youtube.com/watch?v=bG2BmmYr9NQ">Youtube walkthrough on building Google dinosaur game</a></li>
+     <li><a href="https://www.youtube.com/watch?v=9TcU2C1AACw">Youtube walkthrough on building Snake game in JS and HTML</a></li>
+   </ul>
 
    <h4 id="java">Java Resources</h4>
 
@@ -157,6 +167,8 @@
    Fixed: Plan to add a navbar.
    Optional: Try to add more bootstrap features.
    Optional: Add a flexbox
+   Optional: Add tags/keywords (eg. Java, Javascript, Agile etc) to individual list entries. Think similar to reddit's tags.
+             This should allow more accurate searches.
    
    Notes: Navbar has been added but issues have been identified with the dropdown bar. 
           Ids have been assigned to the dropdown menu and the "Home" button links to the "List of Resources Shared" heading.>
