renamed contact_us and about_us pages

--- a/pages/about_us.html
+++ b/pages/about_us.html
@@ -51,7 +51,7 @@
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="../task3_index.html">Profile</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="contactus.html">Contact Us</a>
+            <a class="dropdown-item" href="contact_us.html">Contact Us</a>
           </div>
         </li>
       </ul>
@@ -146,7 +146,7 @@
     <hr>
     <ul class="nav justify-content-center">
       <li class="nav-item">
-        <a class="nav-link active" href="contactus.html">Contact Us</a>
+        <a class="nav-link active" href="contact_us.html">Contact Us</a>
       </li>
       <li class="nav-item">
         <a class="nav-link disabled" href="#">Customer Service</a>
