--- a/task3_index.html
+++ b/task3_index.html
@@ -44,9 +44,9 @@
                 Index
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="pages/aboutus.html">About Us</a>
+                <a class="dropdown-item" href="pages/about_us.html">About Us</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="pages/contactus.html">Contact Us</a>
+                <a class="dropdown-item" href="pages/contact_us.html">Contact Us</a>
               </div>
             </li>
           </ul>
@@ -145,7 +145,7 @@
 
     <ul class="nav justify-content-center" style="font-size: small;">
         <li class="nav-item">
-            <a class="nav-link active" href="pages/aboutus.html">About</a>
+            <a class="nav-link active" href="pages/about_us.html">About</a>
         </li>
         <li class="nav-item">
             <a class="nav-link disabled" href="#">Blog</a>
