--- a/pages/contact_us.html
+++ b/pages/contact_us.html
@@ -34,7 +34,7 @@
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="../task3_index.html">Profile</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="aboutus.html">About Us</a>
+                        <a class="dropdown-item" href="about_us.html">About Us</a>
                     </div>
                 </li>
             </ul>
