Added new resources

--- a/coding_resources.html
+++ b/coding_resources.html
@@ -13,46 +13,6 @@
 </style>
 
 <body>
-  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
-      aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="dropdown01" role="button" data-toggle="dropdown"
-            aria-haspopup="true" aria-expanded="false">Dropdown</a>
-          <div class="dropdown-menu" aria-labelledby="dropdown01">
-            <a class="dropdown-item" href="#gitcmdln">Git/Command Line Resources</a>
-            <a class="dropdown-item" href="#">HTML/CSS Resources</a>
-            <a class="dropdown-item" href="#">Javascript Resources</a>
-            <a class="dropdown-item" href="#">Java Resources</a>
-            <a class="dropdown-item" href="#">Other Resources</a>
-            <a class="dropdown-item" href="#devs">Notable Developer Figures</a>
-          </div>
-        </li>
-      </ul>
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-      </form>
-    </div>
-  </nav>
-  <br>
-  <br>
-  <br>
   <h1 id="home">List of Resources Shared</h1>
 
 
@@ -65,6 +25,10 @@
   <p><a
       href="https://docs.google.com/spreadsheets/d/1BqcSNSfkJEkmOgHMIob3FI7GwToUbD4nCRMm9oNs9Lo/edit?usp=sharing">Table
       of learning objectives covered by Bryan so far.</a></p>
+
+  <p>Bryan's email: lim.yong.tah.bryan@gmail.com</p>
+
+  <p><a href="https://slack-files.com/T01CMAWCV61-F01DAFKNCCB-60d15bde14">Course timetable</a></p>
 
 
   <h2>Index</h2>
@@ -134,6 +98,10 @@
     <li><a href="https://frontend.horse/articles/thinking-outside-the-box-with-css-grid/">Unique CSS grid design</a>
     </li>
     <li><a href="https://umaar.com/dev-tips/240-css-overview-improved/">How to enable CSS Overview Panel</a></li>
+    <li><a href="https://scrollrevealjs.org/">Scroll animation library</a></li>
+    <li><a href="https://www.youtube.com/watch?v=cU6Vu0vzpLc">Bootstrap youtube tutorial</a></li>
+    <li><a href="https://www.youtube.com/watch?v=nBoHOe4oJLc">Another Bootstrap youtube tutorial</a></li>
+    <li><a href="https://www.youtube.com/watch?v=0afZj1G0BIE">CSS youtube tutorial</a></li>
   </ul>
 
   <h4 id="javascript">Javascript Resources</h4>
@@ -143,6 +111,9 @@
     </li>
     <li><a href="https://www.youtube.com/watch?v=9TcU2C1AACw">Youtube walkthrough on building Snake game in JS and
         HTML</a></li>
+    <li><a href="https://github.com/public-apis/public-apis">List of public access APIs</a></li>
+    <li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference">Javascript documentation</a></li>
+    <li><a href="https://www.mathsisfun.com/numbers/bases.html">Basic understanding of base numbers counting</a></li>
   </ul>
 
   <h4 id="java">Java Resources</h4>
